fix typo (horizontal sync lost in transition)

--- a/cores/mist/mist.qsf
+++ b/cores/mist/mist.qsf
@@ -121,7 +121,7 @@ set_location_assignment PIN_33 -to SDRAM_CKE
 set_location_assignment PIN_43 -to SDRAM_CLK
 
 set_global_assignment -name CYCLONEII_OPTIMIZATION_TECHNIQUE BALANCED
-set_global_assignment -name SMART_RECOMPILE ON
+set_global_assignment -name SMART_RECOMPILE OFF
 set_global_assignment -name ENABLE_SIGNALTAP OFF
 set_global_assignment -name USE_SIGNALTAP_FILE tg68k.stp
 set_global_assignment -name PHYSICAL_SYNTHESIS_COMBO_LOGIC ON
@@ -335,7 +335,8 @@ set_instance_assignment -name CURRENT_STRENGTH_NEW 8MA -to AUDIO_L
 set_instance_assignment -name CURRENT_STRENGTH_NEW 8MA -to AUDIO_R
 
 set_instance_assignment -name WEAK_PULL_UP_RESISTOR ON -to UART_RX
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name TIMEQUEST_MULTICORNER_ANALYSIS ON
+set_global_assignment -name VHDL_FILE viking.vhd
 set_global_assignment -name SYSTEMVERILOG_FILE rgb2ypbpr.sv
 set_global_assignment -name VERILOG_FILE sigma_delta_dac.v
 set_global_assignment -name SOURCE_FILE font8x8.memh
@@ -348,7 +349,6 @@ set_global_assignment -name QIP_FILE pll_mfp1.qip
 set_global_assignment -name VERILOG_FILE acsi.v
 set_global_assignment -name VERILOG_FILE fdc.v
 set_global_assignment -name VERILOG_FILE mfp_srff16.v
-set_global_assignment -name VERILOG_FILE viking.v
 set_global_assignment -name VERILOG_FILE cache.v
 set_global_assignment -name VERILOG_FILE mste_ctrl.v
 set_global_assignment -name VERILOG_FILE ethernec.v
@@ -383,3 +383,6 @@ set_global_assignment -name SIGNALTAP_FILE cache.stp
 set_global_assignment -name VERILOG_FILE io_fifo.v
 set_global_assignment -name VERILOG_FILE mfp_hbit16.v
 set_global_assignment -name VERILOG_FILE audio.v
+set_global_assignment -name VHDL_INPUT_VERSION VHDL_2008
+set_global_assignment -name VHDL_SHOW_LMF_MAPPING_MESSAGES OFF
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
