--- a/cores/mist/mist.qsf
+++ b/cores/mist/mist.qsf
@@ -336,6 +336,8 @@ set_instance_assignment -name CURRENT_STRENGTH_NEW 8MA -to AUDIO_R
 
 set_instance_assignment -name WEAK_PULL_UP_RESISTOR ON -to UART_RX
 set_global_assignment -name TIMEQUEST_MULTICORNER_ANALYSIS ON
+set_global_assignment -name VHDL_INPUT_VERSION VHDL_2008
+set_global_assignment -name VHDL_SHOW_LMF_MAPPING_MESSAGES OFF
 set_global_assignment -name VHDL_FILE viking.vhd
 set_global_assignment -name SYSTEMVERILOG_FILE rgb2ypbpr.sv
 set_global_assignment -name VERILOG_FILE sigma_delta_dac.v
@@ -375,7 +377,6 @@ set_global_assignment -name VERILOG_FILE ste_dma_snd.v
 set_global_assignment -name SIGNALTAP_FILE data_io.stp
 set_global_assignment -name SIGNALTAP_FILE cpu.stp
 set_global_assignment -name SIGNALTAP_FILE sdram.stp
-set_global_assignment -name VERILOG_FILE sdram.v
 set_global_assignment -name SIGNALTAP_FILE tg68k.stp
 set_global_assignment -name SIGNALTAP_FILE tg68_bare.stp
 set_global_assignment -name SIGNALTAP_FILE irq.stp
@@ -383,6 +384,5 @@ set_global_assignment -name SIGNALTAP_FILE cache.stp
 set_global_assignment -name VERILOG_FILE io_fifo.v
 set_global_assignment -name VERILOG_FILE mfp_hbit16.v
 set_global_assignment -name VERILOG_FILE audio.v
-set_global_assignment -name VHDL_INPUT_VERSION VHDL_2008
-set_global_assignment -name VHDL_SHOW_LMF_MAPPING_MESSAGES OFF
+set_global_assignment -name VHDL_FILE sdram.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
