--- a/cores/mist/mist.qsf
+++ b/cores/mist/mist.qsf
@@ -351,7 +351,6 @@ set_global_assignment -name QIP_FILE pll_mfp1.qip
 set_global_assignment -name VERILOG_FILE acsi.v
 set_global_assignment -name VERILOG_FILE fdc.v
 set_global_assignment -name VERILOG_FILE mfp_srff16.v
-set_global_assignment -name VERILOG_FILE cache.v
 set_global_assignment -name VERILOG_FILE mste_ctrl.v
 set_global_assignment -name VERILOG_FILE ethernec.v
 set_global_assignment -name VERILOG_FILE osd.v
@@ -385,4 +384,5 @@ set_global_assignment -name VERILOG_FILE io_fifo.v
 set_global_assignment -name VERILOG_FILE mfp_hbit16.v
 set_global_assignment -name VERILOG_FILE audio.v
 set_global_assignment -name VHDL_FILE sdram.vhd
+set_global_assignment -name VHDL_FILE cache.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
